--- a/NEOC/Makefile
+++ b/NEOC/Makefile
@@ -1,12 +1,13 @@
 SHELL = /bin/sh
 CC = gcc
-CFLAGS = -fPIC -Wall -Wextra -O2 -g -Iinclude -I/usr/include -lpthread # C flags
-LDFLAGS = -shared  # linking flags
-RM = rm -f  # rm command
-TARGET_LIB = libneo.so # target lib
+CFLAGS = -fPIC -Wall -Wextra -O2 -g -Iinclude -I/usr/include -lpthread
+LDFLAGS = -shared
+RM = rm -f
+TARGET_LIB = libneo.so
 
-SRCS = $(shell echo src/*.c) # source files
+SRCS = $(shell echo src/*.c)
 OBJS = $(SRCS:.c=.o)
+LIBS = lib/
 
 PREFIX = $(DESTDIR)/usr/local
 BINDIR = $(PREFIX)/bin
@@ -14,7 +15,7 @@ BINDIR = $(PREFIX)/bin
 .PHONY: all
 all: ${TARGET_LIB}
 
-$(TARGET_LIB): $(OBJS)
+$(LIBS)$(TARGET_LIB): $(OBJS)
 	$(CC) ${LDFLAGS} -o $@ $^
 
 $(SRCS:.c=.d):%.d:%.c
@@ -24,6 +25,6 @@ include $(SRCS:.c=.d)
 
 .PHONY: clean
 clean:
-	-${RM} ${TARGET_LIB} ${OBJS} $(SRCS:.c=.d)
+	-${RM}  ${OBJS} $(SRCS:.c=.d)
 
 
